infra/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-tailscale-ingress
  namespace: argocd
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
      - argocd
      secretName: argocd-secret
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
